--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
+    "typicons.font": "^2.0.9",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
